@@ -19,9 +19,13 @@ ul.menu            {}
   
 table.bordered        { border-collapse:collapse; }
   table.bordered tr   {}
-  table.bordered tr.header td { text-align:center;font-weight:bold;background-color:#eee; }
-    table.bordered th { border:1px solid #ccc;padding:0.25em 1em;background-color:#eee; }
-    table.bordered td { border:1px solid #ccc;padding:0.25em 1em;white-space:nowrap; }
+    table.bordered th { border:1px solid #999;padding:0.25em 0.5em;background-color:#eee; }
+    table.bordered td { border:1px solid #999;padding:0.25em 0.5em;white-space:nowrap; }
+    table.bordered tr.header td   { text-align:center;padding:0.25em 0.5em;font-weight:bold;background-color:#ccc; }
+    table.bordered tr.platform td { background-color:#eee; }
+    table.bordered tr.platform h2 { font-size:12pt; }
+    table.bordered td.smaller     { font-size:8pt; }
+    table.bordered td.count       { text-align:right; }
 
 /* page structure */
 
